feat: add 'addedAt' field to 'userWord' schema
- fix: add wordId, userId, addedAt fields to joi-schema
