# src/resources/userWords/userWord.model.js
@@ -8,11 +8,6 @@ const UserWordsSchema = new Schema(
   {
     wordId: { type: Schema.Types.ObjectId, ref: 'Words', required: true },
     userId: { type: Schema.Types.ObjectId, ref: 'users', required: true },
-    difficulty: { type: String, required: false, maxlength: 50 },
-    optional: {
-      type: Object,
-      required: false
-    },
     isDeleted: {
       type: Boolean,
       required: false,
@@ -24,7 +19,13 @@ const UserWordsSchema = new Schema(
       default: false
     },
     group: { type: Number, required: true, min: 0, max: 5 },
-    page: { type: Number, required: true, min: 0, max: 29 }
+    page: { type: Number, required: true, min: 0, max: 29 },
+    addedAt: { type: Date },
+    difficulty: { type: String, required: false, maxlength: 50 },
+    optional: {
+      type: Object,
+      required: false
+    }
   },
   { collection: 'userWords' }
 );
